# Advent-of-code-2025

./: .gitignore  README.md  pyproject.toml
src/advent_of_code_2025/: __init__.py  base.py  profiler.py
src/advent_of_code_2025/day_01/: solver.py
src/advent_of_code_2025/day_02/: solver.py
src/advent_of_code_2025/day_03/: solver.py
src/advent_of_code_2025/day_04/: solver.py
src/advent_of_code_2025/day_05/: solver.py
src/advent_of_code_2025/day_06/: solver.py
src/advent_of_code_2025/day_07/: solver.py
src/advent_of_code_2025/day_08/: solver.py
src/advent_of_code_2025/day_09/: solver.py
src/advent_of_code_2025/day_10/: solver.py
src/advent_of_code_2025/day_11/: solver.py
src/advent_of_code_2025/day_12/: solver.py
src/advent_of_code_2025/day_13/: solver.py
src/advent_of_code_2025/day_14/: solver.py
src/advent_of_code_2025/day_15/: solver.py
src/advent_of_code_2025/day_16/: solver.py
src/advent_of_code_2025/day_17/: solver.py
src/advent_of_code_2025/day_18/: solver.py
src/advent_of_code_2025/day_19/: solver.py
src/advent_of_code_2025/day_20/: solver.py
src/advent_of_code_2025/day_21/: solver.py
test/: base_test.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py
(+4 files in other folders)
