[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Keith Dao", email = "keith.dao.248@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "z3-solver>=4.15.4.0",
]

[project.scripts]
solver = "advent_of_code_2025:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.ruff.lint]
extend-select = ["W", "I", "N", "C4", "PT", "RET", "SLF", "SIM", "TC"]
ignore = ["E741"]
isort.force-sort-within-sections = true
